2007-01-17  Sven Schuetz
	* providerMgr.c:
	2nd fix for 1636805: ain does not work for indication subscriptions

2007-01-16  Sven Schuetz

	* interopProvider.c, internalProvider.h:
	Fixed 1636805: ain does not work for indication subscriptions

2007-01-16  Sven Schuetz

	* internalProvider.h, interopProvider.c, objectImpl.c, providerDrv.c: 
	Fixed 1217828: add indication SubscriptionState support

2007-01-16  Sven Schuetz

	* providerRegister.c, providerRegister.h, providerMgr.c, default.reg: 
	Fixed 1379327: lifecycle indication provider registration faulty

2007-01-12  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-119.boeblingen.de.ibm.com>

	* cimXmlGen.c, cimXmlOps.y, cimXmlParser.c, cimXmlParser.h, 
	cimXmlRequest.c, constClass.c, control.h, httpAdapter.c, objectImpl.c, 
	objectImp.h, providerMgr.c, providerMgr.h, qualifier.c, sfcBroker.c, 
	support.c, support.h:
	Fixed 1635811: memory leaks in HTTP Adapter. There were leaks in the 
	parser and the response XML generation.

2007-01-08  Sven Schuetz

	* objectImpl.h, objectImpl.c, sfcbdumpP32onI32.c, objectImplSwapI32toP32.c,
	cimXmlGen.c:
	Fixed 1627778: default class qualifiers are returned twice

2007-01-08  Sven Schuetz

	* objectImpl.c:
	Fixed 1624528: sfcb getclass doesn't return methods

2007-01-04  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* httpAdapter.c: 
	Fixed 1627910: basic authentication challenge issue. Added 
	WWW-Authenticate header to response.

2007-01-03  Sven Schuetz

	* objectImpl.c, cimXmlGen.c:
	Partially fixed 1624528: sfcb getclass doesn't return methods

2006-12-29  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* providerMgr.c: 
	Fixed 1623382: provider manager incorrectly returned not-found status
	for interop namespace associations.

2006-12-28  Sven Schuetz
	* cimXmlGen.c:
	applied patch from Adrian Schuur
	Fixed 1623249: Incomplete <PROPERTY> xml generated
	
	* classProviderGz.c:
	Fixed 1621417: associators and references calls fail in SFCB 1.2
